--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "paypal-rest-sdk": "^1.8.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
