--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4",
-    "paypal-rest-sdk": "^1.8.1"
+    "nodemon": "^3.1.4"
   },
-  "devDependencies": {},
   "description": ""
 }
