--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "libphonenumber-js": "^1.11.17",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-magnify": "^2.7.4",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
     "react-slick": "^0.30.3",
