--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,15 @@
   "author": "sangam mukherjee",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.726.0",
+    "@aws-sdk/lib-storage": "^3.726.0",
+    "@aws-sdk/s3-request-presigner": "^3.726.0",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
