--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,9 @@
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-image-magnify": "^2.7.4",
+    "react-international-phone": "^4.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
